--- a/src/Ludio.Client/App.xaml
+++ b/src/Ludio.Client/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="Ludio.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Ludio"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Ludio.Themes"
+             StartupUri="Overlay/OverlayWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <local:ThemeResourceDictionary Source="Themes/DarkTheme.xaml"/>
+                <ResourceDictionary Source="Themes/GlobalStyles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
